@@ -88,6 +88,11 @@ Fixed encoding issue on MySQL. Thanks to Waldo Jaquith for the report. [David]
 
 Destination distribution actions are editable again (Bug # 123). [David]
 
+=item *
+
+Fixed the F<favicon.ico> redirect so that it points to a full URL, not just a
+URI path. [David]
+
 =back
 
 =head1 Version 1.11.2 (2009-11-14)
